--- a/index (2).html
+++ b/index (2).html
@@ -10,5 +10,6 @@
 		<p> Привет Всем!!! </p>
 		<a> Это мой личный блог, в котором я делюсь своими идеями и разаработками во frontend </a>
 		<img src="https://old.bigenc.ru/media/2018/01/30/1235931534/36359.jpg">
+		<img src="https://img.freepik.com/free-photo/beautiful-shot-of-a-white-british-shorthair-kitten_181624-57681.jpg>
 	</body>
 </html>
