--- a/index (2).html
+++ b/index (2).html
@@ -9,6 +9,9 @@
 		<h1> Лукин Александр Александрович </h1>
 		<p> Привет Всем!!! </p>
 		<a> Это мой личный блог, в котором я делюсь своими идеями и разаработками во frontend </a>
+		<a> Под понятием frontend подразумевается разработка видимого для пользователя интерфейса и всех функций, с которыми он может взаимодействовать. 
+		По сути, когда вы переходите на любой сайт, то видите там кнопки, текст, различную анимацию и другие составляющие – все это реализовано при помощи фронтенда. 
+		Для создания этих элементов используются три разных языка – HTML, CSS и JavaScript. </a>
 		<img src="https://old.bigenc.ru/media/2018/01/30/1235931534/36359.jpg">
 		<img src="https://img.freepik.com/free-photo/beautiful-shot-of-a-white-british-shorthair-kitten_181624-57681.jpg>
 	</body>
