Добавление нового заголовка
HTML

--- a/index (2).html
+++ b/index (2).html
@@ -14,6 +14,7 @@
 		По сути, когда вы переходите на любой сайт, то видите там кнопки, текст, различную анимацию и другие составляющие – все это реализовано при помощи фронтенда. 
 		Для создания этих элементов используются три разных языка – HTML, CSS и JavaScript. </a>
 		<img src="https://old.bigenc.ru/media/2018/01/30/1235931534/36359.jpg">
+		<h2> HTML </h2>
 		<img src="https://img.freepik.com/free-photo/beautiful-shot-of-a-white-british-shorthair-kitten_181624-57681.jpg>
 	</body>
 </html>
