--- a/index (2).html
+++ b/index (2).html
@@ -15,6 +15,9 @@
 		Для создания этих элементов используются три разных языка – HTML, CSS и JavaScript. </a>
 		<img src="https://old.bigenc.ru/media/2018/01/30/1235931534/36359.jpg">
 		<h2> HTML </h2>
+		<a> Основной инструмент в этой сфере – язык гипертекстовой разметки HTML. 
+		Он нужен в основном для разметки документа, то есть страницы в браузере. 
+		С помощью него разработчик создает структуру, добавляет заголовки, списки и осуществляет другое форматирование контента. </a>
 		<img src="https://img.freepik.com/free-photo/beautiful-shot-of-a-white-british-shorthair-kitten_181624-57681.jpg>
 	</body>
 </html>
